--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section id="hero" class="hero">
         <div class="hero-content">
             <h1>BHSS Hackathon</h1>
-            <p>Get ready for an exciting 12 hour coding competition for SHSM students!</p>
+            <p>Get ready for an exciting 12 hour coding competition for YRDSB SHSM students!</p>
             <a href="https://bit.ly/shsmhackathon" class="cta-button">Join Now</a>
         </div>
     </section>
@@ -81,8 +81,8 @@
         <h2 class="section-title">About Us</h2>
         <div class="about-container">
             <div class="about-text">
-                <p>BHSS Hackathon is an event organized by Bill Hogarth Secondary School aiming to teach students about technology and innovation.</p>
-                <p>This year, we're are looking for creative solutions to improve life for students and teachers at YRDSB.</p>
+                <p>BHSS Hackathon is an event organized by the Competitive Programming Club at Bill Hogarth Secondary School aiming to teach students about technology and innovation!</p>
+                <p>The way this event works is we will be giving you a prompt, and your goal is to create a creative application that follows that prompt!</p>
                 <p>Whether you're a beginner or an experienced coder, our hackathon offers workshops and a collaborative environment to help you bring your ideas to life.</p>
             </div>
             <div class="slideshow-container">
@@ -103,7 +103,7 @@
                     <span class="faq-toggle">+</span>
                 </div>
                 <div class="faq-answer">
-                    <p>The hackathon is open to all high school students from the following High Schools: BHSS, BOSS, UHS, MDHS. No prior coding experience is required, we welcome beginners and experts!</p>
+                    <p>The hackathon is open to all high school students from YRDSB. No prior coding experience is required, we welcome beginners and experts!</p>
                 </div>
             </div>
             <div class="faq-item">
@@ -121,7 +121,7 @@
                     <span class="faq-toggle">+</span>
                 </div>
                 <div class="faq-answer">
-                    <p>Please bring your laptop, charger, and any other devices you might need. We'll provide everything else including food, drinks, andsnacks!</p>
+                    <p>Please bring your laptop, charger, and any other devices you might need. We'll provide everything else including food, drinks, and snacks!</p>
                 </div>
             </div>
             <div class="faq-item">
@@ -130,7 +130,7 @@
                     <span class="faq-toggle">+</span>
                 </div>
                 <div class="faq-answer">
-                    <p>No problem! We'll have workshops for beginners and resources to get you started. You can also help design the GUI of your project or think of the solution!</p>
+                    <p>No problem! Each team will have 3 different roles, so if you are not a coder, you could be the planner or designer of the application!</p>
                 </div>
             </div>
             <div class="faq-item">
@@ -139,7 +139,7 @@
                     <span class="faq-toggle">+</span>
                 </div>
                 <div class="faq-answer">
-                    <p>The hackathon is completely free! Please don't let money get in the way of joining this event.</p>
+                    <p>The hackathon is completely free! The only requirements are being from YRDSB, and a SHSM Student!</p>
                 </div>
             </div>
             <div class="faq-item">
