schedule styles and html done
procrastinating on english yay

--- a/schedule.html
+++ b/schedule.html
@@ -1,1 +1,123 @@
-<!-- helooooooooooooooooooooooooooooooo-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Schedule - BHSS Hackathon</title>
+    <link rel="icon" type="image/png" href="logo.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <!-- Northern Lights Background -->
+    <div class="northern-lights">
+        <div class="stars"></div>
+        <div class="aurora-layer aurora-1"></div>
+        <div class="aurora-layer aurora-2"></div>
+        <div class="aurora-layer aurora-3"></div>
+        <div class="aurora-layer aurora-4"></div>
+    </div>
+
+    <!-- Header -->
+    <header>
+        <a href="index.html" class="logo">
+            <img src="logo.png" alt="BHSS Hackathon Logo"> BHSS Hackathon
+        </a>
+        <nav>
+            <ul>
+                <li><a href="index.html#about">About</a></li>
+                <li><a href="schedule.html" class="active">Schedule</a></li>
+                <li><a href="index.html#faq">FAQ</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Hero Section -->
+    <section class="hero">
+        <div class="hero-content">
+            <h1>Event Schedule</h1>
+            <p>January 14, 2026 • Bill Hogarth Secondary School</p>
+        </div>
+    </section>
+
+    <!-- Schedule Section -->
+    <section class="section">
+        <h2 class="section-title">Hackathon Timeline</h2>
+        <div class="schedule-container">
+            <div class="timeline">
+                <div class="timeline-item">
+                    <div class="timeline-time">9:00 AM</div>
+                    <div class="timeline-content">
+                        <h3>Registration</h3>
+                        <p>Check-in, get your lanyard, and find your teams!</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">9:00 AM</div>
+                    <div class="timeline-content">
+                        <h3>Opening Ceremony</h3>
+                        <p>Welcome speech and hackathon guidelines</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">9:30 AM</div>
+                    <div class="timeline-content">
+                        <h3>Workshop: How to Create an Application</h3>
+                        <p>Learn the fundamentals of app development</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">11:00 AM</div>
+                    <div class="timeline-content">
+                        <h3>Hackathon Begins!</h3>
+                        <p>Start working on your projects</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">12:30 PM</div>
+                    <div class="timeline-content">
+                        <h3>Lunch Break</h3>
+                        <p>Pizza lunch</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">1:00 PM</div>
+                    <div class="timeline-content">
+                        <h3>Work Period</h3>
+                        <p>Work on your projects</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">5:00 PM</div>
+                    <div class="timeline-content">
+                        <h3>University Fair</h3>
+                        <p>See the different universities for computer science!</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">6:00 PM</div>
+                    <div class="timeline-content">
+                        <h3>Final Hacking Session</h3>
+                        <p>Last chance to work on your projects</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">7:30 PM</div>
+                    <div class="timeline-content">
+                        <h3>Project Submission Deadline</h3>
+                        <p>All projects must be submitted by this time</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">8:30 PM</div>
+                    <div class="timeline-content">
+                        <h3>Closing Ceremony & Awards</h3>
+                        <p>Announcement of winners and closing remarks</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+</body>
+</html>
