--- a/schedule.html
+++ b/schedule.html
@@ -48,15 +48,8 @@
                 <div class="timeline-item">
                     <div class="timeline-time">9:00 AM</div>
                     <div class="timeline-content">
-                        <h3>Registration</h3>
-                        <p>Check-in, get your lanyard, and find your teams!</p>
-                    </div>
-                </div>
-                <div class="timeline-item">
-                    <div class="timeline-time">9:00 AM</div>
-                    <div class="timeline-content">
-                        <h3>Opening Ceremony</h3>
-                        <p>Welcome speech and hackathon guidelines</p>
+                        <h3>Registration/Opening Ceremony</h3>
+                        <p>Check-in, get your lanyard, and find your teams! We will also have a welcome speech!</p>
                     </div>
                 </div>
                 <div class="timeline-item">
@@ -70,7 +63,7 @@
                     <div class="timeline-time">11:00 AM</div>
                     <div class="timeline-content">
                         <h3>Hackathon Begins!</h3>
-                        <p>Start working on your projects</p>
+                        <p>We will give you the prompt, and it is time to start working on your projects</p>
                     </div>
                 </div>
                 <div class="timeline-item">
