--- a/schedule.html
+++ b/schedule.html
@@ -83,8 +83,8 @@
                 <div class="timeline-item">
                     <div class="timeline-time">5:00 PM</div>
                     <div class="timeline-content">
-                        <h3>University Fair</h3>
-                        <p>See the different universities for computer science!</p>
+                        <h3>University Fair/Dinner</h3>
+                        <p>See the different universities for computer science! Enjoy our gourmet dinner too!</p>
                     </div>
                 </div>
                 <div class="timeline-item">
