--- a/schedule.html
+++ b/schedule.html
@@ -26,6 +26,7 @@
         <nav>
             <ul>
                 <li><a href="index.html#about">About</a></li>
+                <li><a href="apply.html">Apply</a></li>
                 <li><a href="schedule.html" class="active">Schedule</a></li>
                 <li><a href="index.html#faq">FAQ</a></li>
             </ul>
