--- a/schedule.html
+++ b/schedule.html
@@ -27,6 +27,7 @@
             <ul>
                 <li><a href="index.html#about">About</a></li>
                 <li><a href="schedule.html" class="active">Schedule</a></li>
+                <li><a href='index.html#sponsor'>Sponsors</a></li>
                 <li><a href="index.html#faq">FAQ</a></li>
             </ul>
         </nav>
