prob better wording

--- a/index.html
+++ b/index.html
@@ -215,9 +215,10 @@
                         <i class="fas fa-map-marker-alt"></i>
                     </div>
                     <div class="contact-details">
-                        <h3>Visit Us</h3>
+                        <h3>Location</h3>
                         <p>Bill Hogarth Secondary School</p>
                         <p>100 Donald Sim Avenue</p>
+                        <p>Markham, ON L6B 0R1</p>
                     </div>
                 </div>
                 
