--- a/index.html
+++ b/index.html
@@ -278,5 +278,6 @@
         </div>
     </footer>
     <script src="scripts.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 </body>
 </html>
