--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                     </div>
                     <div class="contact-details">
                         <h3>Email Us</h3>
-                        <p><a href="mailto:SETEMAIL">SETEMAIL</a></p>
+                        <p>Use the form to send us an email!</p>
                     </div>
                 </div>
                 
