--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
     <!-- Prizes Section -->
     <section id="prizes" class="section">
         <h2 class="section-title">Sneak Peek of Prizes to be Won</h2>
+        <h1 class="section-title-comingsoon">Coming Soon...</h1>
+        <!---
         <div class="prizes-container">
             <div class="prize-card">
                 <div class="prize-image">
@@ -75,6 +77,7 @@
                 </div>
             </div>
         </div>
+        -->
     </section>
 
     <!-- About Section -->
@@ -82,7 +85,7 @@
         <h2 class="section-title">About Us</h2>
         <div class="about-container">
             <div class="about-text">
-                <p>BHSS Hackathon is an event organized by the Competitive Programming Club at Bill Hogarth Secondary School aiming to teach students about technology and innovation!</p>
+                <p><strong>BHSS Hackathon</strong> is an event organized by the <strong>Competitive Programming Club</strong> at Bill Hogarth Secondary School aiming to teach students about technology and innovation!</p>
                 <p>The way this event works is we will be giving you a prompt, and your goal is to create a creative application that follows that prompt!</p>
                 <p>Whether you're a beginner or an experienced coder, our hackathon offers workshops and a collaborative environment to help you bring your ideas to life.</p>
             </div>
@@ -106,7 +109,32 @@
                 <div class="sponsor-item">
                     <img src="sponsor2.png" alt="Sponsor 2">
                 </div>
+                <!-- placeholders -->
                 <div class="sponsor-item">
+                    <img src="sponsor1.png" alt="Sponsor 1">
+                </div>
+                <div class="sponsor-item">
+                    <img src="sponsor2.png" alt="Sponsor 2">
+                </div>
+                 <div class="sponsor-item">
+                    <img src="sponsor1.png" alt="Sponsor 1">
+                </div>
+                <div class="sponsor-item">
+                    <img src="sponsor2.png" alt="Sponsor 2">
+                </div>
+                 <div class="sponsor-item">
+                    <img src="sponsor1.png" alt="Sponsor 1">
+                </div>
+                <div class="sponsor-item">
+                    <img src="sponsor2.png" alt="Sponsor 2">
+                </div>
+                 <div class="sponsor-item">
+                    <img src="sponsor1.png" alt="Sponsor 1">
+                </div>
+                <div class="sponsor-item">
+                    <img src="sponsor2.png" alt="Sponsor 2">
+                </div>
+                <!--<div class="sponsor-item">
                     <img src="sponsor3.png" alt="Sponsor 3">
                 </div>
                 <div class="sponsor-item">
@@ -115,7 +143,7 @@
                 <div class="sponsor-item">
                     <img src="sponsor5.png" alt="Sponsor 5">
                 </div>
-                <!-- Duplicate the same items for seamless loop -->
+                Duplicate the same items for seamless loop 
                 <div class="sponsor-item">
                     <img src="sponsor1.png" alt="Sponsor 1">
                 </div>
@@ -130,7 +158,7 @@
                 </div>
                 <div class="sponsor-item">
                     <img src="sponsor5.png" alt="Sponsor 5">
-                </div>
+                </div>-->
             </div>
         </div>
     </section>
@@ -223,11 +251,11 @@
                 
                 <div class="contact-item">
                     <div class="contact-icon">
-                        <i class="fas fa-clock"></i>
+                        <i class="fa-brands fa-instagram"></i>
                     </div>
                     <div class="contact-details">
-                        <h3>Response Time</h3>
-                        <p>We will try to respond to your email in 48 hours</p>
+                        <h3>Instagram</h3>
+                        <p>DM us on Instagram and follow us for more updates!</p>
                     </div>
                 </div>
                 
