--- a/schedule/index.html
+++ b/schedule/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Schedule - BHSS Hackathon</title>
-    <link rel="icon" type="image/png" href="logo.png">
+    <link rel="icon" type="image/png" href="../logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <!-- Northern Lights Background -->
@@ -20,15 +20,15 @@
 
     <!-- Header -->
     <header>
-        <a href="index.html" class="logo">
-            <img src="logo.png" alt="BHSS Hackathon Logo"> BHSS Hackathon
+        <a href="/" class="logo">
+            <img src="../logo.png" alt="BHSS Hackathon Logo"> BHSS Hackathon
         </a>
         <nav>
             <ul>
-                <li><a href="index.html#about">About</a></li>
-                <li><a href="schedule.html" class="active">Schedule</a></li>
-                <li><a href='index.html#sponsor'>Sponsors</a></li>
-                <li><a href="index.html#faq">FAQ</a></li>
+                <li><a href="/#about">About</a></li>
+                <li><a href="/schedule/" class="active">Schedule</a></li>
+                <li><a href='/#sponsor'>Sponsors</a></li>
+                <li><a href="/#faq">FAQ</a></li>
             </ul>
         </nav>
     </header>
@@ -112,6 +112,8 @@
             </div>
         </div>
     </section>
+
+    <script src="../scripts.js"></script>
 
 </body>
 </html>
