--- a/schedule/index.html
+++ b/schedule/index.html
@@ -26,7 +26,7 @@
         <nav>
             <ul>
                 <li><a href="/#about">About</a></li>
-                <li><a href="/schedule/" class="active">Schedule</a></li>
+                <li><a href="schedule/index.html" class="active">Schedule</a></li>
                 <li><a href='/#sponsor'>Sponsors</a></li>
                 <li><a href="/#faq">FAQ</a></li>
             </ul>
