phone functionality and back to .html for schedule cause idk how to fix it

--- a/index.html
+++ b/index.html
@@ -21,22 +21,30 @@
 
 <!-- Header -->
     <header>
-        <a href="#hero" class="logo">
-            <img src="logo.png" alt="BHSS Hackathon Logo"> BHSS Hackathon
-        </a>
-        <nav>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="schedule/index.html">Schedule</a></li>
-                <li><a href='#sponsor'>Sponsors</a></li>
-                <li><a href="#faq">FAQ</a></li>
-            </ul>
-        </nav>
+    <a href="#hero" class="logo">
+        <img src="logo.png" alt="BHSS Hackathon Logo"> BHSS Hackathon
+    </a>
+    <nav>
+        <div class="hamburger" id="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <ul id="nav-menu">
+            <li><a href="#about">About</a></li>
+            <li><a href="schedule.html">Schedule</a></li>
+            <li><a href='#sponsor'>Sponsors</a></li>
+            <li><a href="#faq">FAQ</a></li>
+        </ul>
+    </nav>
     </header>
 
     <!-- Hero Section -->
     <section id="hero" class="hero">
         <div class="hero-content">
+            <div class="hero-logo">
+            <img src="logo.png" alt="BHSS Hackathon Logo">
+            </div>
             <h1>BHSS Hackathon</h1>
             <p>Get ready for an exciting 12 hour coding competition for YRDSB SHSM students!</p>
             <a href="https://bit.ly/shsmhackathon" class="cta-button">Join Now</a>
@@ -255,7 +263,7 @@
                     </div>
                     <div class="contact-details">
                         <h3>Instagram</h3>
-                        <p>DM us on Instagram and follow us for more updates!</p>
+                        <p>DM us on Instagram @cpc.bhss and follow us for more updates!</p>
                     </div>
                 </div>
                 
