--- a/schedule.html
+++ b/schedule.html
@@ -20,17 +20,22 @@
 
     <!-- Header -->
     <header>
-        <a href="/" class="logo">
-            <img src="../logo.png" alt="BHSS Hackathon Logo"> BHSS Hackathon
-        </a>
-        <nav>
-            <ul>
-                <li><a href="/#about">About</a></li>
-                <li><a href="schedule/index.html" class="active">Schedule</a></li>
-                <li><a href='/#sponsor'>Sponsors</a></li>
-                <li><a href="/#faq">FAQ</a></li>
-            </ul>
-        </nav>
+    <a href="#hero" class="logo">
+        <img src="logo.png" alt="BHSS Hackathon Logo"> BHSS Hackathon
+    </a>
+    <nav>
+        <div class="hamburger" id="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <ul id="nav-menu">
+            <li><a href="#about">About</a></li>
+            <li><a href="schedule.html">Schedule</a></li>
+            <li><a href='#sponsor'>Sponsors</a></li>
+            <li><a href="#faq">FAQ</a></li>
+        </ul>
+    </nav>
     </header>
 
     <!-- Hero Section -->
