--- a/schedule.html
+++ b/schedule.html
@@ -30,10 +30,10 @@
             <span></span>
         </div>
         <ul id="nav-menu">
-            <li><a href="#about">About</a></li>
+            <li><a href="index.html#about">About</a></li>
             <li><a href="schedule.html">Schedule</a></li>
-            <li><a href='#sponsor'>Sponsors</a></li>
-            <li><a href="#faq">FAQ</a></li>
+            <li><a href='index.html#sponsor'>Sponsors</a></li>
+            <li><a href="index.html#faq">FAQ</a></li>
         </ul>
     </nav>
     </header>
