--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <!-- Header -->
     <header>
-    <a href="#hero" class="logo">
+    <a href="https://bhsshackathon.dev" class="logo">
         <img src="logo.png" alt="BHSS Hackathon Logo"> BHSS Hackathon
     </a>
     <nav>
@@ -32,7 +32,7 @@
         </div>
         <ul id="nav-menu">
             <li><a href="#about">About</a></li>
-            <li><a href="schedule.html">Schedule</a></li>
+            <li><a href="https://bhsshackathon.dev/schedule">Schedule</a></li>
             <li><a href='#sponsor'>Sponsors</a></li>
             <li><a href="#faq">FAQ</a></li>
         </ul>
