--- a/schedule.html
+++ b/schedule.html
@@ -20,7 +20,7 @@
 
     <!-- Header -->
     <header>
-    <a href="#hero" class="logo">
+    <a href="https://bhsshackathon.dev" class="logo">
         <img src="logo.png" alt="BHSS Hackathon Logo"> BHSS Hackathon
     </a>
     <nav>
@@ -31,7 +31,7 @@
         </div>
         <ul id="nav-menu">
             <li><a href="index.html#about">About</a></li>
-            <li><a href="schedule.html">Schedule</a></li>
+            <li><a href="https://bhsshackathon.dev/schedule">Schedule</a></li>
             <li><a href='index.html#sponsor'>Sponsors</a></li>
             <li><a href="index.html#faq">FAQ</a></li>
         </ul>
