--- a/schedule.html
+++ b/schedule.html
@@ -20,7 +20,7 @@
 
     <!-- Header -->
     <header>
-    <a href="https://bhsshackathon.dev" class="logo">
+    <a href="index.html#hero" class="logo">
         <img src="logo.png" alt="BHSS Hackathon Logo"> BHSS Hackathon
     </a>
     <nav>
