--- a/schedule.html
+++ b/schedule.html
@@ -30,10 +30,10 @@
             <span></span>
         </div>
         <ul id="nav-menu">
-            <li><a href="index.html#about">About</a></li>
+            <li><a href="https://bhsshackathon.dev/index.html#about">About</a></li>
             <li><a href="https://bhsshackathon.dev/schedule">Schedule</a></li>
-            <li><a href='index.html#sponsor'>Sponsors</a></li>
-            <li><a href="index.html#faq">FAQ</a></li>
+            <li><a href='https://bhsshackathon.dev/index.html#sponsor'>Sponsors</a></li>
+            <li><a href="https://bhsshackathon.dev/index.html#faq">FAQ</a></li>
         </ul>
     </nav>
     </header>
