--- a/schedule.html
+++ b/schedule.html
@@ -30,7 +30,7 @@
             <span></span>
         </div>
         <ul id="nav-menu">
-            <li><a href="https://bhsshackathon.dev">About</a></li>
+            <li><a href="https://bhsshackathon.dev/index.html">About</a></li>
             <li><a href="https://bhsshackathon.dev/schedule">Schedule</a></li>
             <li><a href='https://bhsshackathon.dev/index.html#sponsor'>Sponsors</a></li>
             <li><a href="https://bhsshackathon.dev/index.html#faq">FAQ</a></li>
