--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <li><a href="schedule.html">Schedule</a></li>
             <li><a href='#sponsor'>Sponsors</a></li>
             <li><a href="#faq">FAQ</a></li>
+            <li><a href="#contact">Contact Us!</a></li>
         </ul>
     </nav>
     </header>
