--- a/schedule.html
+++ b/schedule.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Schedule - BHSS Hackathon</title>
-    <link rel="icon" type="image/png" href="../logo.png">
+    <link rel="icon" type="image/png" href="logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- Northern Lights Background -->
@@ -20,7 +20,7 @@
 
     <!-- Header -->
     <header>
-    <a href="index.html#hero" class="logo">
+    <a href="index.html" class="logo">
         <img src="logo.png" alt="BHSS Hackathon Logo"> BHSS Hackathon
     </a>
     <nav>
@@ -30,10 +30,11 @@
             <span></span>
         </div>
         <ul id="nav-menu">
-            <li><a href="https://bhsshackathon.dev/index.html">About</a></li>
-            <li><a href="https://bhsshackathon.dev/schedule">Schedule</a></li>
-            <li><a href='https://bhsshackathon.dev/index.html#sponsor'>Sponsors</a></li>
-            <li><a href="https://bhsshackathon.dev/index.html#faq">FAQ</a></li>
+            <li><a href="index.html#about">About</a></li>
+            <li><a href="schedule.html">Schedule</a></li>
+            <li><a href="index.html#sponsor">Sponsors</a></li>
+            <li><a href="index.html#faq">FAQ</a></li>
+            <li><a href="index.html#contact">Contact Us!</a></li>
         </ul>
     </nav>
     </header>
@@ -118,7 +119,7 @@
         </div>
     </section>
 
-    <script src="../scripts.js"></script>
+    <script src="scripts.js"></script>
 
 </body>
 </html>
