--- a/schedule.html
+++ b/schedule.html
@@ -20,7 +20,7 @@
 
     <!-- Header -->
     <header>
-    <a href="index.html" class="logo">
+    <a href="https://bhsshackathon.dev/" class="logo">
         <img src="logo.png" alt="BHSS Hackathon Logo"> BHSS Hackathon
     </a>
     <nav>
@@ -30,11 +30,7 @@
             <span></span>
         </div>
         <ul id="nav-menu">
-            <li><a href="index.html#about">About</a></li>
-            <li><a href="schedule.html">Schedule</a></li>
-            <li><a href="index.html#sponsor">Sponsors</a></li>
-            <li><a href="index.html#faq">FAQ</a></li>
-            <li><a href="index.html#contact">Contact Us!</a></li>
+            <li><a href="https://bhsshackathon.dev/">Home</a></li>
         </ul>
     </nav>
     </header>
