--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
     <!-- Footer -->
     <footer>
         <div class="social-links">
-            <a href="#"><i class="fab fa-discord"></i></a> <!-- should we make one? -->
+            <!--  <a href="#"><i class="fab fa-discord"></i></a> should we make one? -->
             <a href="https://www.instagram.com/cpc.bhss/"><i class="fab fa-instagram"></i></a>
         </div>
     </footer>
