--- a/schedule.html
+++ b/schedule.html
@@ -23,6 +23,16 @@
     <a href="https://bhsshackathon.dev/" class="logo">
         <img src="logo.png" alt="BHSS Hackathon Logo"> BHSS Hackathon
     </a>
+    <nav>
+        <ul>
+            <li class="phone-only"><a href=" bhsshackathon.dev/schedule">Schedule</a></li>
+            <li class="desktop-only"><a href="index.html#about">About</a></li>
+            <li class="desktop-only"><a href="index.html#sponsor">Sponsors</a></li>
+            <li class="desktop-only"><a href="index.html#faq">FAQ</a></li>
+            <li class="desktop-only"><a href="index.html#contact">Contact Us!</a></li>
+        </ul>
+    </nav>
+    </nav>
     </header>
 
     <!-- Hero Section -->
