--- a/index.html
+++ b/index.html
@@ -25,17 +25,12 @@
         <img src="logo.png" alt="BHSS Hackathon Logo"> BHSS Hackathon
     </a>
     <nav>
-        <div class="hamburger" id="hamburger">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-        <ul id="nav-menu">
-            <li><a href="#about">About</a></li>
-            <li><a href="schedule.html">Schedule</a></li>
-            <li><a href='#sponsor'>Sponsors</a></li>
-            <li><a href="#faq">FAQ</a></li>
-            <li><a href="#contact">Contact Us!</a></li>
+        <ul>
+            <li class="phone-only"><a href="bhsshackathon.dev/schedule">Schedule</a></li>
+            <li class="desktop-only"><a href="#about">About</a></li>
+            <li class="desktop-only"><a href="#sponsor">Sponsors</a></li>
+            <li class="desktop-only"><a href="#faq">FAQ</a></li>
+            <li class="desktop-only"><a href="#contact">Contact Us!</a></li>
         </ul>
     </nav>
     </header>
