--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <nav>
         <ul>
             <li class="phone-only"><a href="bhsshackathon.dev/schedule">Schedule</a></li>
+            <li class="desktop-only"><a href="bhsshackathon.dev/schedule">Schedule</a></li>
             <li class="desktop-only"><a href="#about">About</a></li>
             <li class="desktop-only"><a href="#sponsor">Sponsors</a></li>
             <li class="desktop-only"><a href="#faq">FAQ</a></li>
