--- a/schedule.html
+++ b/schedule.html
@@ -25,7 +25,8 @@
     </a>
     <nav>
         <ul>
-            <li class="phone-only"><a href=" bhsshackathon.dev/schedule">Schedule</a></li>
+            <li class="phone-only"><a href="bhsshackathon.dev/schedule">Schedule</a></li>
+            <li class="desktop-only"><a href="bhsshackathon.dev/schedule">Schedule</a></li>
             <li class="desktop-only"><a href="index.html#about">About</a></li>
             <li class="desktop-only"><a href="index.html#sponsor">Sponsors</a></li>
             <li class="desktop-only"><a href="index.html#faq">FAQ</a></li>
