should work pls

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     </a>
     <nav>
         <ul>
-            <li class="phone-only"><a href="bhsshackathon.dev/schedule">Schedule</a></li>
-            <li class="desktop-only"><a href="bhsshackathon.dev/schedule">Schedule</a></li>
+            <li class="phone-only"><a href="schedule.html">Schedule</a></li>
+            <li class="desktop-only"><a href="schedule.html">Schedule</a></li>
             <li class="desktop-only"><a href="#about">About</a></li>
             <li class="desktop-only"><a href="#sponsor">Sponsors</a></li>
             <li class="desktop-only"><a href="#faq">FAQ</a></li>
