--- a/schedule.html
+++ b/schedule.html
@@ -39,7 +39,7 @@
     <section class="hero">
         <div class="hero-content">
             <h1>Event Schedule</h1>
-            <p>January 14, 2026 • Bill Hogarth Secondary School</p>
+            <p>February 25th, 2026 • Bill Hogarth Secondary School</p>
         </div>
     </section>
 
