--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <img src="logo.png" alt="BHSS Hackathon Logo">
             </div>
             <h1>BHSS Hackathon</h1>
-            <p>Get ready for an exciting 12 hour coding competition for YRDSB SHSM students!</p>
+            <p>Get ready for an exciting 12 hour coding competition for YRDSB SHSM students on Wednesday, February 25th, 2026!</p>
             <a href="https://bit.ly/shsmhackathon" class="cta-button">Join Now</a>
         </div>
     </section>
