changed from "free" to free for shsm only

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                     <span class="faq-toggle">+</span>
                 </div>
                 <div class="faq-answer">
-                    <p>Not at all! You can register as an individual, and we'll help you form a team during the event. Teams can have 3 members. You can specify your team members on the registeration form.</p>
+                    <p>Not at all! You can register as an individual, and we'll help you form a team during the event. Teams can have 3 members. You can specify your team members on the registration form.</p>
                 </div>
             </div>
             <div class="faq-item">
@@ -213,7 +213,7 @@
                     <span class="faq-toggle">+</span>
                 </div>
                 <div class="faq-answer">
-                    <p>The hackathon is completely free! The only requirements are being from YRDSB, and a SHSM Student!</p>
+                    <p>The hackathon is completely free for SHSM students! For students not in the SHSM program, it will be approx. $15 - 25 for lunch/dinner!</p>
                 </div>
             </div>
             <div class="faq-item">
